# bge-m3-fastapi

./: .gitignore  .style.yapf  Dockerfile  README.md  cli.py  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  test.py
.github/: llama-cpp.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature.md
.github/workflows/: llama-cpp.yaml
proxy/: nginx.conf
schemas/: embed.py
utils/: logger.py  onnx.py  preprocess.py  text.py
utils/embed/: __init__.py  base.py
utils/embed/llama_cpp/: __init__.py  embedder.py  session.py
utils/embed/onnx/: __init__.py  base.py  cpu.py  cuda.py
utils/mixins/: singleton.py
utils/onnxutils/: __init__.py  base.py  cpu.py  cuda.py
utils/preprocess/: __init__.py  html.py  text.py
