[tool.poetry]
name = "bge-m3-embeddings"
version = "0.1.0"
description = ""
authors = ["myeolinmalchi <rkd2274@pusan.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
fastapi = {extras = ["standard"], version = "^0.115.6"}
kss = "^6.0.4"
transformers = "4.37.2"
tqdm = "^4.67.1"
python-mecab-ko = "^1.3.7"
llama-cpp-python = "^0.3.6"
torch = {version = "^2.5.1", source = "pytorch-cpu"}
torchvision = {version = "^0.20.1", source = "pytorch-cpu"}
torchaudio = {version = "^2.5.1", source = "pytorch-cpu"}
onnxruntime = "^1.20.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"



[[tool.poetry.source]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
