[tool.poetry]
name = "bge-m3-embeddings"
version = "0.1.0"
description = ""
authors = ["myeolinmalchi <rkd2274@pusan.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
fastapi = {extras = ["standard"], version = "^0.115.6"}
kss = "^6.0.4"
transformers = "4.37.2"
tqdm = "^4.67.1"
python-mecab-ko = "^1.3.7"
onnxruntime-gpu = "^1.20.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
