[tool.poetry]
name = "bge-m3-embeddings"
version = "0.1.0"
description = ""
authors = ["myeolinmalchi <rkd2274@pusan.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
fastapi = {extras = ["standard"], version = "^0.115.6"}
kss = "^6.0.4"
transformers = "4.37.2"
tqdm = "^4.67.1"
python-mecab-ko = "^1.3.7"
torch = {version = "^2.6.0", source = "torch-cpu"}
torchvision = {version = "^0.21.0", source = "torch-cpu"}
torchaudio = {version = "^2.6.0", source = "torch-cpu"}
llama-cpp-python = {version = "^0.3.2", source = "llama-cpp-python"}
markdownify = "^0.14.1"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"


[[tool.poetry.source]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
